WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122615
REGRESSION(
r157203
): WebKit crashes after dispatching gesture event
https://bugs.webkit.org/show_bug.cgi?id=122615
Summary
REGRESSION(r157203): WebKit crashes after dispatching gesture event
Ryosuke Niwa
Reported
2013-10-10 13:01:04 PDT
EventDispatcher::dispatchEvent(this, gestureEvent.release()); ASSERT(!gestureEvent->defaultPrevented()); return gestureEvent->defaultHandled() || gestureEvent->defaultPrevented(); } Can't release the event if we're calling method on it later. <
rdar://problem/15198799
>
Attachments
Fixes the bug
(1.27 KB, patch)
2013-10-10 13:03 PDT
,
Ryosuke Niwa
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-10-10 13:03:06 PDT
Created
attachment 213916
[details]
Fixes the bug
Ryosuke Niwa
Comment 2
2013-10-10 13:04:32 PDT
Committed
r157245
: <
http://trac.webkit.org/changeset/157245
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug