REGRESSION(r157203): WebKit crashes after dispatching gesture event https://bugs.webkit.org/show_bug.cgi?id=122615

Reviewed by Anders Carlsson.

Don't release the event until the end of the function where we call member functions on it.

* dom/Node.cpp:
(WebCore::Node::dispatchGestureEvent):


Canonical link: https://commits.webkit.org/140714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157245 268f45cc-cd09-0410-ab3c-d52691b4dbfc